--- a/typescript_work/my-project/src/login.css
+++ b/typescript_work/my-project/src/login.css
@@ -69,11 +69,13 @@ body {
 }
 
 .admin-text {
-    font-size: 1.0em;
+    font-size: 24px;
     color: #333;
-    font-weight: bold;
-    margin: 0;
-    text-align: right;
+    font-weight: 600;
+    text-align: center;
+    margin-left: 700px;
+    line-height: 100%;
+    letter-spacing: 0px;
 }
 
 /* 로그인 폼 */
