feat : 관리자 페이지 경로 수정

--- a/run_admin/src/main/resources/templates/exchange/detail.html
+++ b/run_admin/src/main/resources/templates/exchange/detail.html
@@ -385,7 +385,7 @@
         <div class="detail-container">
             <div class="detail-header">
                 <div class="detail-title">환전 신청 정보</div>
-                <a th:href="@{/admin/exchanges}" class="btn-list">목록으로</a>
+                <a th:href="@{/exchanges}" class="btn-list">목록으로</a>
             </div>
 
             <table class="detail-table">
