--- a/run_admin/src/main/resources/templates/game/detail.html
+++ b/run_admin/src/main/resources/templates/game/detail.html
@@ -278,7 +278,7 @@
     </div>
 
     <div class="content-wrapper">
-        <a th:href="@{/admin/games}" class="back-button">← 목록으로 돌아가기</a>
+        <a th:href="@{/games}" class="back-button">← 목록으로 돌아가기</a>
 
         <div class="detail-card">
             <div class="detail-header">
