--- a/run_admin/src/main/resources/templates/inquiry/detail.html
+++ b/run_admin/src/main/resources/templates/inquiry/detail.html
@@ -393,7 +393,7 @@
         <div class="detail-container">
             <div class="detail-header">
                 <div class="detail-title">문의 정보</div>
-                <a th:href="@{/admin/support}" class="btn-list">목록으로</a>
+                <a th:href="@{/support}" class="btn-list">목록으로</a>
             </div>
 
             <table class="detail-table">
