--- a/run_admin/src/main/resources/templates/user/detail.html
+++ b/run_admin/src/main/resources/templates/user/detail.html
@@ -344,7 +344,7 @@
 
     <div class="content-wrapper">
         <div class="action-buttons">
-            <a th:href="@{/admin/users}" class="back-button">← 목록으로 돌아가기</a>
+            <a th:href="@{/users}" class="back-button">← 목록으로 돌아가기</a>
             <button class="btn-delete" onclick="showDeleteConfirm()">회원 삭제</button>
         </div>
 
