--- a/run_admin/src/main/resources/templates/payment/detail.html
+++ b/run_admin/src/main/resources/templates/payment/detail.html
@@ -392,7 +392,7 @@
 
     <div class="content-wrapper">
         <div class="action-buttons">
-            <a th:href="@{/admin/payments}" class="back-button">← 목록으로 돌아가기</a>
+            <a th:href="@{/payments}" class="back-button">← 목록으로 돌아가기</a>
             <div th:if="${payment.refundInfo != null}">
                 <button class="btn-approve" onclick="showApproveConfirm()">환불 요청 승인</button>
                 <button class="btn-reject" onclick="showRejectConfirm()">환불 요청 거절</button>
